# Sharing

./: Arabic_Stopwords-0.3-py3-none-any.whl  README.md  big pic.txt  compose  cube_product_handover.txt  dockercompose  env.txt  ingest_all.py  noise_detection.py  noise_filter.py  page_fixer.py  testing.ipynb
arabic_cleaning_lib-master/: CHANGELOG.md  README.md  dev.Dockerfile  mypy.ini  pyproject.toml  requirements.txt
arabic_cleaning_lib-master/arabic_cleaning/: cleaning_utils.py  quality_filters.py  text_cleansing.py
arabic_cleaning_lib-master/arabic_cleaning/constents/: __init__.py  arabic.py  cleansing.py  ligatures.py  symbols.py
arabic_cleaning_lib-master/scripts/: azure_deploy.sh  local_login.sh  remote_login.sh  run_docker.sh  update_version.sh
arabic_cleaning_lib-master/streamlit_app/: docker-compose.yml  poetry_login.py
arabic_cleaning_lib-master/streamlit_app/proxy/: Dockerfile  static.yaml
arabic_cleaning_lib-master/streamlit_app/proxy/configs/: middlewares.yaml  routers.yaml
arabic_cleaning_lib-master/streamlit_app/src/: Dockerfile  cleaning_text.py  filter_books.py  pyproject.toml
arabic_cleaning_lib-master/tests/: conftest.py  test_cleaning_utils.py  test_quality_filters.py  test_text_cleansing.py
eval_script/: e2e_data_prep.ipynb  eval_dfine.py  eval_trocr.py  evaluate_pipeline.py
jiwer/: jiwer-4.0.0-py3-none-any.whl
shit/: de_rotate_tesseract.py  ingest_all.py  w3lib-2.4.0-py3-none-any.whl
stress_testing/: readme.md  stress_test.py
